--- a/api/package.json
+++ b/api/package.json
@@ -8,10 +8,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "@types/express": "^4.17.21",
     "express": "^4.19.2",
     "typescript": "^5.5.4"
-  }
+  },
+  "description": ""
 }
